Fix nav misalignment that occurred when switching pages

--- a/src/Mock.css
+++ b/src/Mock.css
@@ -105,7 +105,7 @@
 }
 
 .EventsList {
-  height: 85.5vh;
+  height: 85vh;
   overflow: auto;
 }
 
@@ -175,7 +175,7 @@
 }
 
 .RewardsList {
-  height: 85.5vh;
+  height: 85vh;
   overflow: auto;
 }
 
